@@ -466,7 +466,7 @@ void KrSearchDialog::editCurrent()
     QString name = current->text(1);
     name += (name.endsWith( "/" ) ? current->text(0) : "/" + current->text(0) );
     KURL url = vfs::fromPathOrURL( name );
-    KrViewer::edit( url );
+    KrViewer::edit( url, this );
   }
 }
 
@@ -478,7 +478,7 @@ void KrSearchDialog::viewCurrent()
     QString name = current->text(1);
     name += (name.endsWith( "/" ) ? current->text(0) : "/" + current->text(0) );
     KURL url = vfs::fromPathOrURL( name );
-    KrViewer::view( url );
+    KrViewer::view( url, this );
   }
 }
 
