@@ -24,6 +24,7 @@
 
     --architecture-- refactoring in the useractions, see CVSNEWS
 
+    FIXED: viewer gives back the focus to the search/locate widgets after ESC
     FIXED: problems with local directory names containing '@' character
     FIXED: security: sometimes the passwords are stored in cleartext in bookmarks.xml
     FIXED: cannot close Krusader when "menubar on top of the screen" is chosen
